[gd_scene load_steps=11 format=3 uid="uid://dcmvodte43pjv"]

[ext_resource type="Script" path="res://ship/bullet.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cka0v55jglhey" path="res://ship/trail.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://c7t7wabilmjdp" path="res://ship/textures/bullet.png" id="3"]
[ext_resource type="AudioStream" uid="uid://ca0ymowjk2y1o" path="res://ship/sfx/bullet-hit-2.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://rujtrq6gyysq" path="res://ship/sfx/bullet-hit-enemy-1.wav" id="6"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.0

[sub_resource type="CapsuleShape2D" id="2"]
radius = 2.3602
height = 4.7204

[sub_resource type="Gradient" id="3"]
offsets = PackedFloat32Array(0, 0.158163, 0.813953, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0, 0.6, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="4"]
gradient = SubResource("3")

[sub_resource type="ParticleProcessMaterial" id="5"]
emission_shape = 2
emission_sphere_radius = 1.0
spread = 90.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("4")

[node name="bullet" type="RigidBody2D" groups=["bullet", "transient"]]
collision_mask = 3
mass = 0.1
physics_material_override = SubResource("1")
can_sleep = false
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1")

[node name="collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("2")

[node name="trail" parent="." instance=ExtResource("2")]
modulate = Color(0, 0.584314, 0.913725, 1)
MAX_LENGTH = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")

[node name="particleTrail" type="GPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(0.489017, -0.541547)
amount = 100
process_material = SubResource("5")
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="deathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="trailDeathTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="bulletHitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
volume_db = -8.0
attenuation = 2.0

[node name="bulletHitEnemySfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
volume_db = -8.0
attenuation = 2.0

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="trailDeathTimer" to="." method="_on_trailDeathTimer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
